--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site Settings
-baseurl: 		"/hashtag/"
+baseurl: 		""
 title: 			Hashtag for Jekyll
 
 name: 			Hashtag <i>for</i> Jekyll
 description: 	A beautifully contemporary and elegant Jekyll theme
-url: 			"http://localhost:4000"
+url: 			""
 
 paginate: 		3
 paginate_path: 	"blog/page:num"
