--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 baseurl: 		""
 title: 			Hashtag for Jekyll
 
-name: 			Hashtag <i>for</i> Jekyll
+name: 			  Hashtag <i>for</i> Jekyll
 description: 	A beautifully contemporary and elegant Jekyll theme
-url: 			
+url:          ""			
 
 paginate: 		3
 paginate_path: 	"blog/page:num"
