--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: 			Hashtag for Jekyll
 
 name: 			  Hashtag <i>for</i> Jekyll
 description: 	A beautifully contemporary and elegant Jekyll theme
-url:          ""			
+url:          "/"			
 
 paginate: 		3
 paginate_path: 	"blog/page:num"
