--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site Settings
-baseurl: 		"/hashtag"
+baseurl: 		""
 title: 			Société Algorithmique :: Algorithmic Society
 
 name: 			  Société Algorithmique
 description: 	Chaire de recherche de l'institut MIAI
-url:          "https://github.com/gillesbastin"			
+url:          "https://github.com/gillesbastin/hashtag/"			
 
 paginate: 		3
 paginate_path: 	"blog/page:num"
