--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site Settings
-baseurl: ""
+baseurl: "/hashtag"
 title: "Société Algorithmique :: Algorithmic Society"
 
 name: "Société Algorithmique"
 description: Chaire de recherche de l'institut MIAI
-url: "https://github.com/gillesbastin/hashtag/"			
+url: "https://github.com/gillesbastin/"			
 
 paginate: 3
 paginate_path: "blog/page:num"
