--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: "/hashtag/"
 title: "Société Algorithmique :: Algorithmic Society"
 
 name: "Société Algorithmique"
-description: Chaire de recherche de l'institut MIAI
+site.description: Chaire de recherche de l'institut MIAI
 url: "https://github.com/gillesbastin"			
 
 paginate: 3
