--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 baseurl: "/hashtag"
 title: "Société Algorithmique :: Algorithmic Society"
 
-name: "Société Algorithmique"
+name: "Société Algorithmique :: Algorithmic Society"
 description: Chaire de recherche de l'institut MIAI
 url: "https://github.com/gillesbastin"			
 
