--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ email: gilles.bastin@iepg.fr
 disqus: 
 analytics:
 
-copyright: Chaire Société algorithmique, 2019	
+copyright: 🄯Chaire Société algorithmique, 2019	
 
 # Build Settings
 permalinks: pretty
