--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Société algorithmique"
 
 name: "Société algorithmique"
 description: Une chaire de recherche de l'institut MIAI
-url: "https://github.com/gillesbastin/algorithmicsociety"			
+url: "https://github.com/gillesbastin"			
 
 paginate: 3
 paginate_path: "blog/page:num"
