--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ email: "gilles.bastin@iepg.fr"
 disqus: 
 analytics:
 
-copyright: "(ɔ) Chaire Société algorithmique, 2019"	
+copyright: "(ɔ) Chaire Société algorithmique, 2019-2023"	
 
 # Build Settings
 permalinks: pretty
